[Upgrade] 更新所有服务配置文件，启动脚本，增加环境变量，支持docker或k8s部署